build language components

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gemography</title>
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 
-<body>
-  <div class="container w-full md:w4/6 mx-auto" id="root">
-
+<body class="antialiased font-sans bg-gray-200">
+  <div class="container p-8 w-full md:w2/3 lg:w2/6 mx-auto" id="root">
   </div>
 </body>
 
